Fixed bug #55323 (SoapClient segmentation fault when XSD_TYPEKIND_EXTENSION contains itself)

git-svn-id: http://svn.php.net/repository/php/php-src/trunk@314737 c90b9560-bf6c-de11-be94-00142212c4b1